WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59392
Fix OwnPtr strict errors in InlineFlowBox.cpp
https://bugs.webkit.org/show_bug.cgi?id=59392
Summary
Fix OwnPtr strict errors in InlineFlowBox.cpp
Kenneth Russell
Reported
2011-04-25 16:32:29 PDT
Fix OwnPtr strict errors in InlineFlowBox.cpp
Attachments
Patch
(1.44 KB, patch)
2011-04-25 16:34 PDT
,
Kenneth Russell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2011-04-25 16:34:55 PDT
Created
attachment 91007
[details]
Patch
Adam Barth
Comment 2
2011-04-25 17:13:06 PDT
Comment on
attachment 91007
[details]
Patch Clearing flags on attachment: 91007 Committed
r84854
: <
http://trac.webkit.org/changeset/84854
>
Adam Barth
Comment 3
2011-04-25 17:13:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug