2011-04-25  Kenneth Russell  <kbr@google.com>

Reviewed by David Levin.

        Fix OwnPtr strict errors in InlineFlowBox.cpp
        https://bugs.webkit.org/show_bug.cgi?id=59392

        * rendering/InlineFlowBox.cpp:
        (WebCore::InlineFlowBox::setLayoutOverflow):
        (WebCore::InlineFlowBox::setVisualOverflow):


Canonical link: https://commits.webkit.org/74581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84854 268f45cc-cd09-0410-ab3c-d52691b4dbfc